changes on paragraph

--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>My Profile Card</title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <div class="card"></div>
+  <div class="card">
+    <div class="card_cover"></div>
+    <div class="card_contents">
+        <div class="card_mueez.png">
+          <img src="images/mueez.png" id="img">
+        </div>
+        <h1 class="heading">
+          <span class="card_heading--sup">Ajao Mueez</span>
+        </h1>
+        <p>Creative Developer</p>
+    </div>
+  </div>
 </body>
 </html>
