changes on paragraph

--- a/index.html
+++ b/index.html
@@ -14,7 +14,12 @@
         <h1 class="heading">
           <span class="card_heading--sup">Ajao Mueez</span>
         </h1>
-        <p>Creative Developer</p>
+        <h2 class="title">
+          <span class="card_heading--sup">Creative Developer</span>
+        </h2>
+        <p>
+          I am an innovative graduate with substantial level of knowledge, skills, education and knowledge.
+        </p>
     </div>
   </div>
 </body>
